--- a/src/main/resources/templates/favorites.html
+++ b/src/main/resources/templates/favorites.html
@@ -20,6 +20,11 @@
     <section id="favorites-section">
     </section>
 </div>
+<div id="uptoTop">
+    <svg class="icon" aria-hidden="true">
+        <use xlink:href="#icon-fanhuidingbu"></use>
+    </svg>
+</div>
 <script type="text/javascript" th:src="@{/js/favorites.js}"></script>
 </body>
 </html>
