--- a/src/main/resources/templates/note.html
+++ b/src/main/resources/templates/note.html
@@ -127,11 +127,11 @@
         <use xlink:href="#icon-tousu1"></use>
     </svg>
 </span>
-<span id="uptoTop">
+<div id="uptoTop">
     <svg class="icon" aria-hidden="true">
         <use xlink:href="#icon-fanhuidingbu"></use>
     </svg>
-</span>
+</div>
 
 <!--kindeditor编辑器-->
 <script type="text/javascript" charset="utf-8" th:src="@{/kindeditor/kindeditor-all-min.js}"></script>
