--- a/src/main/resources/templates/personal-homepage.html
+++ b/src/main/resources/templates/personal-homepage.html
@@ -163,6 +163,11 @@
         </div>
     </div>
 </div>
+<div id="uptoTop">
+    <svg class="icon" aria-hidden="true">
+        <use xlink:href="#icon-fanhuidingbu"></use>
+    </svg>
+</div>
 <script>
     let forword;
     function showForwordEditor(ele){
