--- a/src/main/resources/templates/feed.html
+++ b/src/main/resources/templates/feed.html
@@ -174,6 +174,11 @@
         </div>
     </div>
 </div>
+<div id="uptoTop">
+    <svg class="icon" aria-hidden="true">
+        <use xlink:href="#icon-fanhuidingbu"></use>
+    </svg>
+</div>
 <script type="text/javascript" th:src="@{/js/feed.js}"></script>
 <script>
     let forword;
