--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -60,6 +60,56 @@
         </div>
     </div>
     -->
+    <nav id="secondary-menu">
+        <a href="">
+            <span class="iconfont">
+                <svg class="icon" aria-hidden="true" style="font-size: 16px">
+                    <use xlink:href="#icon-shouye"></use>
+                </svg>
+            </span>
+            <span>首页</span>
+        </a>
+        <a href="">
+            <span class="iconfont">
+                <svg class="icon" aria-hidden="true" style="font-size: 16px">
+                    <use xlink:href="#icon-biji-copy"></use>
+                </svg>
+            </span>
+            <span>手记</span>
+        </a>
+        <a href="">
+            <span class="iconfont">
+                <svg class="icon" aria-hidden="true" style="font-size: 16px">
+                    <use xlink:href="#icon-wenda-copy"></use>
+                </svg>
+            </span>
+            <span>问答</span>
+        </a>
+        <a href="">
+            <span class="iconfont">
+                <svg class="icon" aria-hidden="true" style="font-size: 16px">
+                    <use xlink:href="#icon-biaoqian1"></use>
+                </svg>
+            </span>
+            <span>专栏</span>
+        </a>
+        <a href="">
+            <span class="iconfont">
+                <svg class="icon" aria-hidden="true" style="font-size: 16px">
+                    <use xlink:href="#icon-fenlei"></use>
+                </svg>
+            </span>
+            <span>资源</span>
+        </a>
+        <a href="">
+            <span class="iconfont">
+                <svg class="icon" aria-hidden="true" style="font-size: 16px">
+                    <use xlink:href="#icon-tianping"></use>
+                </svg>
+            </span>
+            <span>小黑屋</span>
+        </a>
+    </nav>
     <div id="container">
         <div id="center">
             <!--手记区-->
@@ -97,14 +147,14 @@
                 <div id='techHeadline'>
                     <h2>
                         <span>
-                            <svg class="icon" aria-hidden="true" style="font-size: 16px; fill: #f01414;">
-                                <use xlink:href="#icon-hotjar"></use>
+                            <svg class="icon" aria-hidden="true">
+                                <use xlink:href="#icon-rementuijian-copy"></use>
                             </svg>
                         </span>
                         <em>热</em><em>门</em><em>文</em><em>章</em>
                         <span>
-                            <svg class="icon" aria-hidden="true" style="font-size: 16px; fill: #f01414;">
-                                <use xlink:href="#icon-hotjar"></use>
+                            <svg class="icon" aria-hidden="true">
+                                <use xlink:href="#icon-rementuijian-copy"></use>
                             </svg>
                         </span>
                     </h2>
