--- a/src/main/resources/templates/note.html
+++ b/src/main/resources/templates/note.html
@@ -47,11 +47,11 @@
             <textarea style="display: none;" th:text="${note.content}"></textarea>
         </div>
 
-        <!--========评论======-->
+        <!--评论-->
         <div id="write-comment-box">
 
         </div>
-        <!--========评论区========-->
+        <!--评论区-->
         <div id="comment-area">
             <div id="comment-area-title">
                 <span>评论区</span>
@@ -87,7 +87,6 @@
         </div>
     </aside>
     <aside id='recommend'>
-        <h2>相关推荐</h2>
         <!--轮播图-->
         <div class="layui-carousel" id="recommend-carousel">
             <div carousel-item>
@@ -100,6 +99,7 @@
         </div>
     </aside>
 </div>
+<!--手记功能-->
 <div id='articleFunc'>
     <ul>
         <li id="favorite">
