--- a/src/main/resources/static/css/home.css
+++ b/src/main/resources/static/css/home.css
@@ -97,12 +97,35 @@
 .cardItems:nth-child(4):hover span {
     color: rgba(0, 133, 235, 1);
 }
+
+/*二级导航栏*/
+#secondary-menu{
+    display: block;
+    width: 960px;
+    padding: 0 10px;
+    margin: 8px auto;
+}
+#secondary-menu a{
+    display: inline-block;
+    margin: 0 10px;
+    text-align: center;
+    font-size: 12px;
+    letter-spacing: 1px;
+}
+#secondary-menu a span{
+    display: block;
+    margin: 2px 0;
+}
+#secondary-menu a:hover span:nth-child(2){
+    color: rgba(0, 161, 214, 1);
+}
+
 /*主页内容容器*/
 #container {
     position: relative;
     width: 960px;
     min-height: 630px;
-    margin: 16px auto;
+    margin: 8px auto 16px;
     padding-right: 316px;
 }
 #center {
@@ -125,16 +148,6 @@
     padding-left: 10px;
     border-radius: 5px;
 }
-/*.articleHeadline::before{
-    content: '';
-    position: absolute;
-    left: 0;
-    widows: 0;
-    height: 0;
-    border-width: 20px;
-    border-style: solid;
-    border-color: transparent transparent transparent rgba(54, 58, 57, .8);
-}*/
 .articleHeadline h2 {
     display: block;
     width: 50%;
