--- a/src/main/resources/static/css/note.css
+++ b/src/main/resources/static/css/note.css
@@ -399,17 +399,24 @@ body {
     margin-left: 24px;
     background-color: rgba(255, 255, 255, 1);
     box-shadow: 0 1px 1px 1px rgb(230, 230, 230);
+    overflow: hidden;
 }
-#recommend h2 {
-    width: 100%;
-    height: 30px;
-    line-height: 30px;
-    padding-left: 10px;
-    border-left: solid 3px rgba(220, 220, 220, 1);
-    font-size: 14px;
-    font-weight: normal;
-    color: rgba(54, 58, 57, 1);
-    background-color: rgba(250, 250, 250, 1);
+#recommend::before{
+    z-index: 1;
+    position: absolute;
+    top: 1px;
+    left: -15px;
+    display: block;
+    content: '推荐';
+    width: 50px;
+    height: 20px;
+    line-height: 20px;
+    text-align: center;
+    font-size: 10px;
+    font-weight: lighter;
+    color: #fff;
+    background-color: #ff9813;
+    transform: rotate(-45deg);
 }
 
 #articleFunc {
