--- a/src/main/resources/static/css/personal-homepage.css
+++ b/src/main/resources/static/css/personal-homepage.css
@@ -60,29 +60,45 @@ body {
     width: 100%;
     height: 32px;
     line-height: 32px;
+    padding-left: 2px;
     color: #fff;
     text-align: left;
     font-size: 16px;
-}
-#personal-basic-info-right > div:nth-child(1){
-    font-size: 16px;
     font-weight: bold;
 }
-/*性别*/
-#personal-basic-info-right > div:nth-child(1) span:nth-child(2), #personal-basic-info-right > div:nth-child(1) span:nth-child(3){
+/*性别，经验*/
+#personal-basic-info-right > div span:nth-child(2), #personal-basic-info-right > div span:nth-child(3){
     padding: 2px;
     border-radius: 2px;
     font-size: 14px;
     font-weight: normal;
 }
-#personal-basic-info-right > div:nth-child(1) span:nth-child(2){
+#personal-basic-info-right > div span:nth-child(2){
     margin: 0 4px;
 }
-#personal-basic-info-right > div:nth-child(1) span:nth-child(3){
+#personal-basic-info-right > div span:nth-child(3){
     background-color: rgba(0, 161, 214, 1);
 }
-#personal-basic-info-right > div:nth-child(2){
+/*个性签名*/
+#personal-basic-info-right > input{
+    display: block;
+    width: 200px;
+    height: 30px;
+    line-height: 30px;
+    margin-top: 2px;
+    border-radius: 4px;
+    color: #fff;
+    text-align: left;
     font-size: 12px;
+    background-color: transparent;
+    border: none;
+    outline: none;
+    text-indent: 2px;
+}
+#personal-basic-info-right > input:focus{
+    color: rgba(54, 58, 57, 1);
+    background-color: #fff;
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.3);
 }
 
 #personal-basic-operate{
@@ -157,14 +173,19 @@ body {
     box-shadow: 0 1px 2px rgba(0, 0, 0,.1);
 }
 /*手记*/
+#publish-infomation-note{
+    min-height: 360px;
+    padding: 10px 20px;
+    border-radius: 8px;
+    background-color: #fff;
+}
 .article {
     width: 100%;
     height: 80px;
-    padding: 5px 20px;
-    margin-bottom: 10px;
-    border-radius: 8px;
+    padding: 5px 0;
+    margin-bottom: 8px;
+    border-bottom: solid 1px rgba(220, 220, 220, 1);
     letter-spacing: 1px;
-    background-color: #fff;
 }
 .article:last-child{
     border-bottom: none;
@@ -529,6 +550,27 @@ body {
 #feeds-block .layui-flow-more{
     font-size: 13px;
     padding: 10px 0;
+}
+
+/*内容为空*/
+#no-content-box{
+    width: 100%;
+    margin: 100px auto;
+}
+#no-content-icon, #no-content {
+    display: block;
+    width: 100%;
+    color: #707070;
+    text-align: center;
+}
+#no-content-icon .icon{
+    font-size: 80px;
+}
+#no-content {
+    height: 50px;
+    line-height: 50px;
+    font-size: 14px;
+    letter-spacing: 1px;
 }
 
 /*跳转顶部*/
