--- a/src/main/resources/templates/account.html
+++ b/src/main/resources/templates/account.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" th:href="@{/css/common/validation.css}">
     <link rel="stylesheet" type="text/css" th:href="@{/css/account.css}">
     <link rel="stylesheet" type="text/css" th:href="@{/css/account-different.css}">
-    <title>个人信息</title>
+    <title>个人中心</title>
 </head>
 <body>
 <div th:replace="commons/common :: doubleRing"></div>
