--- a/src/main/resources/templates/asking.html
+++ b/src/main/resources/templates/asking.html
@@ -4,36 +4,30 @@
 <head>
     <head th:include="commons/common :: headfiles"></head>
     <link rel="stylesheet" th:href="@{/user-editormd/css/editormd.css}"/>
-    <link rel="stylesheet" th:href="@{/user-editormd/css/myeditormd.css}"/>
-    <link rel="stylesheet" th:href="@{/user-editormd/css/myeditormd-different.css}"/>
-    <title th:text="${note.title}"></title>
+    <link rel="stylesheet" th:href="@{/css/asking.css}"/>
+    <title>提问题ing...</title>
 </head>
 <body>
-<!--<div th:replace="commons/common :: doubleRing"></div>-->
 <div id='container'>
-    <form id="note-form" method="post">
-        <input type="hidden" name="noteId" th:value="${note.id}">
-        <input type="hidden" id="hiddenTypeId" th:value="${note.type}">
-        <input type="hidden" id="status" th:value="${note.status}">
+    <form id="question-form">
         <div id='funcBar'>
-            <label id='titleLabel'>标题：</label><input type="text" id='title' name="title" th:value="${note.title}" autocomplete="off">
-            <select name='typeId' id='noteType'>
+            <label id='titleLabel'>标题：</label><input type="text" id='title' name="title" autocomplete="off">
+            <select name='typeId' id='question-type'>
                 <option style="display: none">请选择</option>
             </select>
-            <a th:if="${note.status == 2}" class='func' id='publish' title='发布手记'>发布手记</a>
-            <a class='func' id='save' title='保存更改'>保存手记</a>
-            <a class='func' id='delete' href='/user/mynotes' title='取消本次编辑，且所有修改不保存，该操作不可恢复'>取消</a>
+            <span id="warm-tips">标题、内容都不能为空哦 ( • ̀ω•́ )</span>
+            <a class="func" id="publish" title="提问题">提问题</a>
+            <a class="func" id='delete' href="/user/questions" title="取消本次编辑，且所有修改不保存，该操作不可恢复">取消</a>
         </div>
         <div class="editormd" id="note-editormd">
-            <textarea class="editormd-markdown-textarea" name="markdownDoc" th:text="${note.content}"></textarea>
+            <textarea class="editormd-markdown-textarea" name="markdownDoc"></textarea>
             <!-- 第二个隐藏文本域，用来构造生成的HTML代码，方便表单POST提交，这里的name可以任意取，后台接受时以这个name键为准 -->
             <textarea class="editormd-html-textarea" name="noteContent" id="note-editormd-html-doc"></textarea>
         </div>
     </form>
 </div>
-<!--editormd-->
 <script type="text/javascript" th:src="@{/user-editormd/editormd.js}"></script>
-<script type="text/javascript" th:src="@{/js/editing.js}"></script>
+<script type="text/javascript" th:src="@{/js/asking.js}"></script>
 <script type="text/javascript">
     $(function () {
         editormd("note-editormd", {
@@ -44,13 +38,15 @@
             imageUpload: true,
             imageFormats: ["jpg", "jpeg", "gif", "png", "bmp", "webp"],
             imageUploadURL: "/user/file/notepic",
+            //这个配置在simple.html中并没有，但是为了能够提交表单，使用这个配置可以让构造出来的HTML代码直接在第二个隐藏的textarea域中，方便post提交表单。
             saveHTMLToTextarea: true,
             emoji: true,
             toc: true,
             taskList: true,
             toolbarIcons: function () {
                 return ["undo", "redo", "|", "bold", "del", "italic", "quote", "ucwords", "uppercase", "lowercase", "|", "h1", "h2", "h3", "h4", "h5", "h6", "|", "list-ul", "list-ol", "hr", "|", "link", "reference-link", "image", "code", "preformatted-text", "code-block", "table", "datetime", "emoji", "html-entities", "pagebreak", "|", "goto-line", "watch", "preview", "fullscreen", "clear", "search", "|", "help", "info"]
-            }
+            },
+            placeholder: "\n\n1.描述问题\n2.贴上相关代码\n3.报错信息\n4.尝试过的方式、方法、报错内容提示\n5.上传相关截图"
         });
     });
 </script>
