--- a/src/main/resources/static/css/common/common.css
+++ b/src/main/resources/static/css/common/common.css
@@ -1,6 +1,25 @@
+@font-face {
+    font-family: 'iconfont';  /* project id 828483 */
+    src: url('//at.alicdn.com/t/font_828483_aalrr3045g.eot');
+    src: url('//at.alicdn.com/t/font_828483_aalrr3045g.eot?#iefix') format('embedded-opentype'),
+    url('//at.alicdn.com/t/font_828483_aalrr3045g.woff2') format('woff2'),
+    url('//at.alicdn.com/t/font_828483_aalrr3045g.woff') format('woff'),
+    url('//at.alicdn.com/t/font_828483_aalrr3045g.ttf') format('truetype'),
+    url('//at.alicdn.com/t/font_828483_aalrr3045g.svg#iconfont') format('svg');
+}
+.iconfont{
+    font-family: "iconfont" !important;
+    font-size:16px;
+    font-style:normal;
+    -webkit-font-smoothing: antialiased;
+    -webkit-text-stroke-width: 0.2px;
+    -moz-osx-font-smoothing: grayscale;
+}
+
 * {
     padding: 0;
     margin: 0;
+    -webkit-box-sizing: border-box;
     box-sizing: border-box;
     font-family: Alright Sans LP,Avenir Next,Helvetica Neue,Helvetica,Arial,PingFang SC,Source Han Sans SC,Hiragino Sans GB,Microsoft YaHei,WenQuanYi MicroHei,sans-serif;
 }
