--- a/src/main/resources/static/css/common/navigationbar/head.css
+++ b/src/main/resources/static/css/common/navigationbar/head.css
@@ -14,7 +14,6 @@ body {
     background-color: rgba(246, 246, 246, 1);
 }
 
-/*-----------测试-------------*/
 .menu-active{
     z-index: 999;
     position: fixed;
@@ -26,8 +25,8 @@ body {
     position: absolute;
     top: 0;
     width: 100%;
-    height: 40px;
-    line-height: 40px;
+    height: 42px;
+    line-height: 42px;
     padding: 0 calc((100% - 1080px) / 2);
     background-color: rgba(255, 255, 255, 1);
     box-shadow: 0 1px 2px rgba(0,0,0,.1);
@@ -54,8 +53,8 @@ body {
 .menu-item > a {
     position: relative;
     display: block;
-    height: 40px;
-    line-height: 40px;
+    height: 42px;
+    line-height: 42px;
     padding: 0 10px;
     font-size: 13px;
     color: rgba(54, 58, 57, 1);
@@ -85,8 +84,8 @@ body {
 }
 #user {
     position: relative;
-    height: 40px;
-    line-height: 40px;
+    height: 42px;
+    line-height: 42px;
     padding: 0 10px;
     font-size: 13px;
     color: rgba(54, 58, 57, 1);
@@ -96,14 +95,14 @@ body {
 #profile {
     width: 30px;
     height: 30px;
-    margin: 5px;
+    margin: 6px 5px;
     border-radius: 50%;
 }
 #user_detail {
     display: none;
     z-index: 100;
     position: absolute;
-    top: 40px;
+    top: 42px;
     right: 50%;
     width: 200px;
     height: 200px;
@@ -209,7 +208,7 @@ body {
     display: none;
     z-index: 100;
     position: absolute;
-    top: 40px;
+    top: 42px;
     left: calc(50% - 50px);
     width: 100px;
     /*box-shadow: 0 1px 1px 1px rgb(230, 230, 230);*/
@@ -223,8 +222,8 @@ body {
     position: relative;
     display: block;
     width: 100%;
-    height: 40px;
-    line-height: 40px;
+    height: 42px;
+    line-height: 42px;
     font-size: 12px;
     color: rgba(54, 58, 57, 1);
     text-align: center;
@@ -251,7 +250,7 @@ body {
     display: none;
     z-index: 100;
     position: absolute;
-    top: 40px;
+    top: 42px;
     left: calc(50% - 140px);
     width: 280px;
     padding: 10px 0;
@@ -326,7 +325,7 @@ body {
     display: none;
     z-index: 100;
     position: absolute;
-    top: 40px;
+    top: 42px;
     left: calc(50% - 120px);
     width: 240px;
     max-height: 200px;
