--- a/src/main/resources/static/css/feed.css
+++ b/src/main/resources/static/css/feed.css
@@ -12,18 +12,30 @@ body {
 /*导航栏*/
 #header {
     width: 100%;
-    height: 40px;
+    height: 42px;
     background-color: rgba(255, 255, 255, 1);
 }
 #menu{
-    padding: 0 calc((100% - 1050px) / 2);
+    padding: 0 calc((100% - 1160px) / 2);
 }
 
 #container {
     position: relative;
-    width: 1050px;
-    padding-right: 304px;
-    margin: 20px auto;
+    width: 1160px;
+    padding-left: 248px;
+    padding-right: 278px;
+    margin: 8px auto;
+}
+/*左边*/
+#left{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 240px;
+    height: 200px;
+    margin-right: 8px;
+    border-radius: 4px;
+    background-color: #fff;
 }
 /*中间*/
 #center{
@@ -33,13 +45,11 @@ body {
     position: relative;
     display: block;
     width: 100%;
-    padding-bottom: 60px;
     background-color: rgba(255, 255, 255, 1);
 }
 #original-editor{
-    margin-bottom: 16px;
-    border-radius: 8px;
-    /*box-shadow: 0 1px 2px rgba(0, 0, 0,.1);*/
+    margin-bottom: 8px;
+    border-radius: 4px;
 }
 .forword-editor-cla, .comment-editor-cla1, .comment-editor-cla2{
     margin-bottom: 0;
@@ -55,15 +65,17 @@ body {
     border-color: transparent transparent rgba(220, 220, 220, 1) transparent;
 }
 .forword-editor-cla::before{
-    left: 117px;
+    left: 105px;
 }
 .comment-editor-cla1::before{
-    left: 369px;
+    left: 315px;
 }
 .comment-editor-cla2::before{
-    left: 179px;
+    left: 156px;
 }
-#editor-submit, .forword-submit-cla, .comment-submit-cla{
+#editor-submit{
+}
+.forword-submit-cla, .comment-submit-cla{
     position: absolute;
     bottom: 12px;
     right: 10px;
@@ -71,66 +83,11 @@ body {
     height: 36px;
     line-height: 36px;
     padding: 0 8px;
-    border-radius: 2px;
+    border-radius: 4px;
     font-size: 14px;
     text-align: center;
     color: #fff;
     background-color: rgba(244, 90, 131, 1);
-    cursor: pointer;
-}
-/*添加图片*/
-#img-bar{
-    position: absolute;
-    bottom: 0;
-    left: 5px;
-    height: 60px;
-    padding: 0 48px 0 10px;
-}
-.delete-img-btn{
-    display: inline-block;
-    width: fit-content;
-    height: fit-content;
-    cursor: pointer;
-}
-.delete-img-btn img{
-    display: inline-block;
-    width: 40px;
-    height: 40px;
-    margin: 10px 5px;
-}
-#add-feed-img-btn{
-    position: absolute;
-    top: 10px;
-    right: 8px;
-    display: block;
-    width: 40px;
-    height: 40px;
-    line-height: 40px;
-    border: dashed 2px #E4E5E7;
-    font-size: 18px;
-    color: #E4E5E7;
-    text-align: center;
-    cursor: pointer;
-    overflow: hidden;
-}
-#add-feed-img-btn:hover{
-    color: rgba(244, 90, 131, 1);
-    border: dashed 2px rgba(244, 90, 131, 1);
-}
-#add-feed-img-btn input[type=file] {
-    display: block;
-    position: absolute;
-    top: 0;
-    right: 0;
-    width: 40px;
-    height: 40px;
-    padding: 0;
-    margin: 0;
-    -moz-opacity:0;
-    opacity: 0;
-    outline: none;
-    -ms-filter: 'alpha(opacity=0)';
-    filter: 'alpha(opacity=0)';
     cursor: pointer;
 }
 /*动态*/
@@ -141,8 +98,8 @@ body {
 }
 .feed-item{
     position: relative;
-    margin-bottom: 10px;
-    border-radius: 8px;
+    margin-bottom: 8px;
+    border-radius: 4px;
     font-size: 14px;
     background-color: rgba(255, 255, 255, 1);
     border-bottom: solid 1px #d2e9fb;
@@ -162,28 +119,36 @@ body {
     color: #FFB800;
 }
 .feed-item-top{
+    position: relative;
     width: 100%;
     height: 80px;
-    line-height: 80px;
     padding: 0 25px;
+    text-align: left;
 }
 .feed-item-top img{
-    width: 40px;
-    height: 40px;
-    margin: 20px 10px 20px 0;
+    width: 48px;
+    height: 48px;
+    margin: 16px 16px 16px 0;
     border-radius: 50%;
 }
+.feed-item-top a, .feed-item-top time{
+    position: absolute;
+    left: 89px;
+    display: block;
+    height: 20px;
+    line-height: 20px;
+}
 .feed-item-top a{
+    top: 18px;
     color: rgba(244, 90, 131, 1);
+
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
 }
 .feed-item-top time{
-    position: absolute;
-    top: 20px;
-    right: 25px;
-    display: block;
-    width: fit-content;
-    height: 40px;
-    line-height: 40px;
+    bottom: 18px;
+    font-size: 13px;
     color: rgba(181, 181, 181, 1);
 }
 .feed-item-center{
@@ -191,7 +156,7 @@ body {
     line-height: 35px;
     padding: 0 60px 10px 80px;
 }
-/*=====动态图片大小=====*/
+/*动态图片*/
 .feed-item-content-img-box{
     position: relative;
     display: block;
@@ -201,7 +166,6 @@ body {
     padding: 15px;
     margin-top: 5px;
     background-color: #F4F5F7;
-    box-shadow: 0 1px 2px rgba(0, 0, 0, .1);
 
     display: -webkit-box;             /* OLD - iOS 6-, Safari 3.1-6 */
     display: -moz-box;                 /* OLD - Firefox 19- (buggy but mostly works) */
@@ -248,11 +212,9 @@ body {
     border-radius: 5px;
     cursor: pointer;
 }
-/*==========*/
 .feed-item-bottom{
     width: 100%;
     height: 40px;
-    line-height: 40px;
 
     display: -webkit-box;             /* OLD - iOS 6-, Safari 3.1-6 */
     display: -moz-box;                 /* OLD - Firefox 19- (buggy but mostly works) */
@@ -274,105 +236,103 @@ body {
     -o-justify-content: center;
     justify-content: center;
 }
-.feed-item-bottom span{
+.feed-item-bottom > span{
     display: block;
     text-align: center;
-}
-.feed-item-bottom span:nth-child(1), .feed-item-bottom span:nth-child(2), .feed-item-bottom span:nth-child(3){
+
     -webkit-box-flex: 1;              /* OLD - iOS 6-, Safari 3.1-6 */
     -moz-box-flex: 1;                 /* OLD - Firefox 19- */
     -webkit-flex: 1;                     /* Chrome */
     -ms-flex: 1;                           /* IE 10 */
     flex: 1;                                   /* NEW, Spec - Opera 12.1, Firefox 20+ */
 }
-.feed-item-bottom span:nth-child(1){
+.feed-item-bottom > span:nth-child(1){
     border-right: solid 1px rgba(0, 0, 0, .1);
 }
-.feed-item-bottom span:nth-child(3){
+.feed-item-bottom > span:nth-child(3){
     border-left: solid 1px rgba(0, 0, 0, .1);
 }
-.feed-item-bottom span a{
-    font-size: 14px;
+.feed-item-bottom > span > a{
+    position: relative;
     display: block;
     width: fit-content;
     height: 100%;
     line-height: 100%;
     margin: 0 auto;
-    color: #333333;
+    padding: 12px 0;
+    font-size: 14px;
+    text-align: center;
     cursor: pointer;
-
-    display: -webkit-box;             /* OLD - iOS 6-, Safari 3.1-6 */
-    display: -moz-box;                 /* OLD - Firefox 19- (buggy but mostly works) */
-    display: -ms-flexbox;       /* TWEENER - IE 10 */
-    display: -webkit-flex;      /* NEW - Chrome */
-    display: flex;              /* NEW, Spec - Opera 12.1, Firefox 20+ */
-
-    -webkit-box-orient: horizontal;          /* 09版 */
-    -webkit-flex-direction: row;        /* 12版 */
-    -moz-flex-direction: row;
-    -ms-flex-direction: row;
-    -o-flex-direction: row;
-    flex-direction: row;
-
-    -webkit-box-pack: center;       /* 09版 */
-    -webkit-justify-content: center;        /* 12版 */
-    -moz-justify-content: center;
-    -ms-justify-content: center;
-    -o-justify-content: center;
-    justify-content: center;
+    vertical-align: middle;
 }
-.feed-item-bottom span a:hover{
-    color: rgba(244, 90, 131, 1);
+.feed-item-bottom > span > a .icon{
+    font-size: 16px;
+}
+.feed-item-bottom > span > a:hover{
+    color: #ff9813;
 }
 /*是否转发*/
-.feed-item-bottom span .has-forword, .feed-item-bottom span .has-like{
-    color: rgba(244, 90, 131, 1);
+.feed-item-bottom > span .has-forword, .feed-item-bottom > span .has-like{
+    /*color: rgba(244, 90, 131, 1);*/
+    color: #ff9813;
 }
-.feed-item-bottom span .no-forword, .feed-item-bottom span .no-like{
+.feed-item-bottom > span .no-forword, .feed-item-bottom > span .no-like{
     color: #333333;
 }
 /*动态数据*/
 .forword-cnt, .comment-cnt, .like-cnt{
-    padding: 13px 5px;
+    padding: 0 4px;
     font-size: 14px;
     font-style: normal;
+    text-align: center;
 }
 /*转发内容*/
 .forword-item-block{
     position: relative;
     background-color: #F4F5F7;
     font-size: 13px;
-    padding-bottom: 10px;
     margin-top: 8px;
 }
+
 .forword-item-top{
+    position: relative;
     width: 100%;
     height: 60px;
     line-height: 60px;
     padding: 0 15px;
 }
 .forword-item-top img{
-    width: 30px;
-    height: 30px;
-    margin: 15px 10px 15px 0;
+    width: 36px;
+    height: 36px;
+    margin: 12px 10px 12px 0;
     border-radius: 50%;
 }
+.forword-item-top a, .forword-item-top time{
+    position: absolute;
+    left: 61px;
+    display: block;
+}
 .forword-item-top a{
+    top: 12px;
+    height: 20px;
+    line-height: 20px;
     color: rgba(244, 90, 131, 1);
+
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
 }
 .forword-item-top time{
-    position: absolute;
-    top: 15px;
-    right: 15px;
-    display: block;
-    width: fit-content;
-    height: 30px;
-    line-height: 30px;
+    bottom: 10px;
+    height: 16px;
+    line-height: 16px;
+    font-size: 12px;
     color: rgba(181, 181, 181, 1);
 }
+
 .forword-item-center{
-    min-height: 50px;
-    line-height: 30px;
+    min-height: 30px;
+    line-height: 25px;
     padding: 0 15px 0 50px;
 }
 /*动态已被删除*/
@@ -392,10 +352,12 @@ body {
     position: absolute;
     top: 0;
     right: 0;
-    width: 280px;
-    margin-left: 24px;
+    width: 270px;
+    margin-left: 8px;
+    border-radius: 4px;
     background-color: rgba(255, 255, 255, 1);
     box-shadow: 0 1px 2px rgba(0, 0, 0,.1);
+    overflow: hidden;
 }
 
 #uptoTop {
@@ -432,24 +394,8 @@ body {
 }
 
 /*响应式*/
-@media screen and (min-width: 1081px) and (max-width: 1200px) {
-    #menu {
-        width: 100%;
-        padding: 0 calc((100% - 960px) / 2);
-    }
-    #container {
-        width: 960px;
-    }
-}
-@media screen and (max-width: 1088px) {
+@media screen and (max-width: 1200px) {
     body {
-        min-width: 996px;
-    }
-    #menu {
-        width: 100%;
-        padding: 0 calc((100% - 930px) / 2);
-    }
-    #container {
-        width: 930px;
+        min-width: 1200px;
     }
 }
