--- a/src/main/resources/static/css/personal-homepage.css
+++ b/src/main/resources/static/css/personal-homepage.css
@@ -154,10 +154,9 @@ body {
 #center .layui-tab-brief>.layui-tab-title .layui-this{
     color: rgba(244, 90, 131, 1);
 }
-#center .layui-tab-title .layui-this:after{
+#center .layui-tab-title .layui-this::after{
     border-color: rgba(244, 90, 131, 1);
 }
-
 #original-content .layui-tab-content{
     padding: 0;
     margin-top: 10px;
