--- a/src/main/resources/templates/feed.html
+++ b/src/main/resources/templates/feed.html
@@ -22,30 +22,30 @@
             </div>
             <div class="feed-item-center">{{ d.map.content }}</div>
             <div class="feed-item-bottom">
-            <span>
-                <a data-id="{{ d.feed.id }}" data-forword-state="{{ d.forwordState }}" class="{{ d.forwordStateCla }}" onclick="showForwordEditor(this)">
-                    <svg class="icon" aria-hidden="true" style="font-size: 20px; margin: 10px 0;">
-                        <use xlink:href="#icon-zhuanfa-"></use>
-                    </svg>
-                    <em class="forword-cnt" id="{{ d.forwordCntId }}">{{ d.feed.forwordCnt }}</em>
-                </a>
-            </span>
                 <span>
-                <a data-id="{{ d.feed.id }}" onclick="showForwordComment(this)">
-                    <svg class="icon" aria-hidden="true" style="font-size: 22px; margin: 9px 0;">
-                        <use xlink:href="#icon-chat"></use>' +
-                    </svg>
-                    <em class="comment-cnt" id="{{ d.commentCntId }}">{{ d.feed.commentCnt }}</em>
-                </a>
-            </span>
+                    <a data-id="{{ d.feed.id }}" data-forword-state="{{ d.forwordState }}" class="{{ d.forwordStateCla }}" onclick="showForwordEditor(this)">
+                        <svg class="icon" aria-hidden="true">
+                            <use xlink:href="#icon-zhuanfa--copy"></use>
+                        </svg>
+                        <span class="forword-cnt" id="{{ d.forwordCntId }}">{{ d.feed.forwordCnt }}</span>
+                    </a>
+                </span>
                 <span>
-                <a data-id="{{ d.feed.id }}" data-like-state="{{ d.likeState }}" class="{{ d.likeStateCla }}" onclick="likeFeed(this)">
-                    <svg class="icon" aria-hidden="true" style="font-size: 20px; margin: 10px 0;">
-                        <use xlink:href="#icon-zan"></use>
-                    </svg>
-                    <em class="like-cnt" id="{{ d.likeCntId }}">{{ d.feed.likeCnt }}</em>
-                </a>
-            </span>
+                    <a data-id="{{ d.feed.id }}" onclick="showForwordComment(this)">
+                        <svg class="icon" aria-hidden="true">
+                            <use xlink:href="#icon-pinglun4"></use>' +
+                        </svg>
+                        <span class="comment-cnt" id="{{ d.commentCntId }}">{{ d.feed.commentCnt }}</span>
+                    </a>
+                </span>
+                <span>
+                    <a data-id="{{ d.feed.id }}" data-like-state="{{ d.likeState }}" class="{{ d.likeStateCla }}" onclick="likeFeed(this)">
+                        <svg class="icon" aria-hidden="true">
+                            <use xlink:href="#icon-dianzan"></use>
+                        </svg>
+                        <span class="like-cnt" id="{{ d.likeCntId }}">{{ d.feed.likeCnt }}</span>
+                    </a>
+                </span>
             </div>
         </div>
     </script>
@@ -84,26 +84,26 @@
                 </div>
             </div>
             <div class="feed-item-bottom">
-            <span>
-                <a data-id="{{ d.feed.id }}" onclick="showForwordComment(this)">
-                    <svg class="icon" aria-hidden="true" style="font-size: 22px; margin: 9px 0;">
-                        <use xlink:href="#icon-chat"></use>' +
-                    </svg>
-                    <em class="comment-cnt" id="{{ d.commentCntId }}">{{ d.feed.commentCnt }}</em>
-                </a>
-            </span>
                 <span>
-                <a data-id="{{ d.feed.id }}" data-like-state="{{ d.likeState }}" class="{{ d.likeStateCla }}" onclick="likeFeed(this)">
-                    <svg class="icon" aria-hidden="true" style="font-size: 20px; margin: 10px 0;">
-                        <use xlink:href="#icon-zan"></use>
-                    </svg>
-                    <em class="like-cnt" id="{{ d.likeCntId }}">{{ d.feed.likeCnt }}</em>
-                </a>
-            </span>
+                    <a data-id="{{ d.feed.id }}" onclick="showForwordComment(this)">
+                        <svg class="icon" aria-hidden="true">
+                            <use xlink:href="#icon-pinglun4"></use>' +
+                        </svg>
+                        <span class="comment-cnt" id="{{ d.commentCntId }}">{{ d.feed.commentCnt }}</span>
+                    </a>
+                </span>
+                <span>
+                    <a data-id="{{ d.feed.id }}" data-like-state="{{ d.likeState }}" class="{{ d.likeStateCla }}" onclick="likeFeed(this)">
+                        <svg class="icon" aria-hidden="true">
+                            <use xlink:href="#icon-dianzan"></use>
+                        </svg>
+                        <span class="like-cnt" id="{{ d.likeCntId }}">{{ d.feed.likeCnt }}</span>
+                    </a>
+                </span>
             </div>
         </div>
     </script>
-    <title>我的动态</title>
+    <title>动态首页</title>
 </head>
 <body id="scroll-ele">
 <div th:replace="commons/common :: doubleRing"></div>
@@ -112,18 +112,12 @@
 </header>
 <div id='container'>
     <input type="hidden" id="current-user" th:value="${userId}">
+    <div id="left">
+
+    </div>
     <div id="center">
         <div id="original-editor">
             <textarea id="editor-input" style="display: none;"></textarea>
-            <div id="img-bar">
-                <span id="add-feed-img-btn">
-                    <svg class="icon" aria-hidden="true" style="cursor: pointer;">
-                        <use xlink:href="#icon-add"></use>
-                    </svg>
-                    <input id="feed-img-input" title="添加图片发布图片动态哦 ( • ̀ω•́ )" name="file" type="file" accept="image/*" multiple="multiple"/>
-                </span>
-            </div>
-            <span id="editor-submit">发布动态</span>
         </div>
         <div id="feeds-block">
             <!--
@@ -186,8 +180,8 @@
         layui.use('layedit', function () {
             let layedit = layui.layedit;
 
-            let feedId = ele.getAttribute("data-id");  //利用feedId为每个编辑框设置唯一id
-            let feedblock = ele.parentElement.parentElement.parentElement;
+            let feedId = ele.getAttribute("data-id"),  //利用feedId为每个编辑框设置唯一id
+                feedblock = ele.parentElement.parentElement.parentElement;
             if(feedblock.getAttribute("data-comment") === "1"){
                 feedblock.removeChild(document.getElementById("comment-editor-"+feedId));
                 feedblock.removeChild(document.getElementById("comment-area-"+feedId));
@@ -205,8 +199,7 @@
             let forwordEditor = document.createElement("div");
             forwordEditor.id = "forword-editor-" + feedId;
             forwordEditor.classList.add("forword-editor-cla");
-            forwordEditor.innerHTML = "<textarea id='forword-editor-input-"+ feedId +"' style='display: none;'></textarea>" +
-                "<span data-id='"+ feedId +"' class='forword-submit-cla' onclick='forwordFeed(this)'>转发该动态</span>";
+            forwordEditor.innerHTML = "<textarea id='forword-editor-input-"+ feedId +"' style='display: none;'></textarea>";
             feedblock.appendChild(forwordEditor);
             if(ele.getAttribute("data-forword-state") === "-1"){
                 ele.style.color = "rgba(244, 90, 131, 1)"; //点亮转发按钮
@@ -216,7 +209,8 @@
                 height: 100,
                 tool: [
                     'face' //表情
-                ]
+                ],
+                btn: "<span data-id='"+ feedId +"' onclick='forwordFeed(this)' class='layui-layedit-submit-btn'>转发</span>"
             });
         });
     }
@@ -237,7 +231,7 @@
                 let feedId = ele.getAttribute("data-id");
                 layedit.sync(forword);
                 let content = document.querySelector("#forword-editor-input-"+ele.getAttribute("data-id")).value;
-                content = content + " //转发动态";
+                content = content + "<em style='margin: 0 2px;color: rgba(0, 161, 214, 1);font-style: normal;'>//转发动态</em>";
                 $.ajax({
                     type: "POST",
                     url: '/user/feed/forword',
@@ -331,8 +325,7 @@
             let commentEditor = document.createElement("div");
             commentEditor.id = "comment-editor-" + feedId;
             commentEditor.classList.add(cla);
-            commentEditor.innerHTML = "<textarea id='comment-editor-input-"+ feedId +"' style='display: none;'></textarea>" +
-                "<span data-id='"+ feedId +"' class='comment-submit-cla' onclick='commentFeed(this)'>评论该动态</span>";
+            commentEditor.innerHTML = "<textarea id='comment-editor-input-"+ feedId +"' style='display: none;'></textarea>";
             //加载评论区
             let commentBlock = document.createElement("div");
             commentBlock.id = "comment-area-" + feedId;
@@ -345,7 +338,8 @@
                 height: 100,
                 tool: [
                     'face' //表情
-                ]
+                ],
+                btn: "<span data-id='"+ feedId +"' onclick='commentFeed(this)' class='layui-layedit-submit-btn'>评论</span>"
             });
             loadComment(feedId, document.getElementById("comment-area-" + feedId));
         });
