修改动态页面样式

--- a/src/main/resources/static/layui/css/layui.css
+++ b/src/main/resources/static/layui/css/layui.css
@@ -2541,7 +2541,7 @@ a cite {
 
  .layui-form-item .layui-form-checkbox {
   margin-right: 5px;
-  margin-bottom: 5px
+  margin-bottom: 5px;
  }
 }
 
