--- a/src/main/resources/templates/commons/navigationbar/head.html
+++ b/src/main/resources/templates/commons/navigationbar/head.html
@@ -126,7 +126,7 @@
                                                         <use xlink:href="#icon-biji"></use>
                                                     </svg>
                                                 </span>
-                                        <span>手记管理</span>
+                                        <span>创作管理</span>
                                     </a>
                                 </li>
                             </ul>
