--- a/src/main/resources/templates/commons/reply.html
+++ b/src/main/resources/templates/commons/reply.html
@@ -66,11 +66,11 @@
         });
 
         //发表评论
-        let noteId = document.querySelector("#noteId");
-        let bereplyId = document.querySelector("#bereplyId");
-        let replyContent = document.querySelector("#reply-content");
-        let submitReplyBtn = document.querySelector("#submit-reply-content");
-        let isClickReplyBtn = true;
+        let noteId = document.querySelector("#noteId"),
+            bereplyId = document.querySelector("#bereplyId"),
+            replyContent = document.querySelector("#reply-content"),
+            submitReplyBtn = document.querySelector("#submit-reply-content"),
+            isClickReplyBtn = true;
         submitReplyBtn.addEventListener("click", function (e) {
             if(isClickReplyBtn){
                 isClickReplyBtn = false;
