--- a/src/main/resources/static/css/common/comment-area.css
+++ b/src/main/resources/static/css/common/comment-area.css
@@ -73,7 +73,7 @@
     letter-spacing: 1px;
     color: rgba(108, 108, 108, 1);
 }
-/*=============评论自定义功能==============*/
+/*评论自定义功能*/
 .comment-func{
     position: absolute;
     right: 10px;
@@ -92,17 +92,18 @@
     color: rgba(0, 161, 214, 1);
 }
 .comment-func-point {
+    display: block;
+    line-height: 32px;
+    padding: 0 16px;
     font-size: 12px;
-    color: rgba(246, 246, 246, 1);
+    color: rgba(54, 58, 57, 1);
     cursor: pointer;
 }
 .comment-func-point:hover {
     color: rgba(66, 211, 132, .83);
+    background-color: #F4F5F7;
 }
-.report-comment:hover{
-    color: rgba(255, 234, 133, 1);
-}
-.delete-comment:hover{
+.report-comment:hover, .delete-comment:hover{
     color: rgba(255, 63, 75, 1);
 }
 /*===========================*/
@@ -114,6 +115,11 @@
     font-size: 13px;
     text-align: left;
     word-break: break-all;
+}
+.comment-content img{
+    width: 18px;
+    height: 18px;
+    margin: 0 1px;
 }
 .replies {
     position: relative;
