--- a/src/main/resources/static/css/personal-homepage.css
+++ b/src/main/resources/static/css/personal-homepage.css
@@ -159,7 +159,7 @@ body {
 }
 #original-content .layui-tab-content{
     padding: 0;
-    margin-top: 10px;
+    margin-top: 8px;
 }
 /*广告推荐*/
 #recommend-content{
@@ -270,28 +270,8 @@ body {
 }
 
 /*动态*/
-#publish-infomation-feed{
+#feeds-block{
     background-color: #f4f5f7;
-}
-.forword-editor-cla, .comment-editor-cla1, .comment-editor-cla2{
-    position: relative;
-    display: block;
-    width: 100%;
-    padding-bottom: 60px;
-    background-color: rgba(255, 255, 255, 1);
-}
-.forword-editor-cla, .comment-editor-cla1, .comment-editor-cla2{
-    margin-bottom: 0;
-}
-.forword-editor-cla::before, .comment-editor-cla1::before, .comment-editor-cla2::before{
-    content: '';
-    position: absolute;
-    top: -8px;
-    width: 0;
-    height: 0;
-    border-width: 4px;
-    border-style: solid;
-    border-color: transparent transparent rgba(220, 220, 220, 1) transparent;
 }
 .forword-editor-cla::before{
     left: 124px;
@@ -302,255 +282,6 @@ body {
 .comment-editor-cla2::before{
     left: 184px;
 }
-.forword-submit-cla, .comment-submit-cla{
-    position: absolute;
-    bottom: 12px;
-    right: 8px;
-    display: block;
-    height: 36px;
-    line-height: 36px;
-    padding: 0 8px;
-    border-radius: 2px;
-    font-size: 14px;
-    text-align: center;
-    color: #fff;
-    background-color: rgba(244, 90, 131, 1);
-    cursor: pointer;
-}
-/*动态*/
-.feed-item{
-    position: relative;
-    margin-bottom: 10px;
-    border-radius: 8px;
-    font-size: 14px;
-    background-color: rgba(255, 255, 255, 1);
-}
-.feed-item-top{
-    width: 100%;
-    height: 80px;
-    line-height: 80px;
-    padding: 0 25px;
-}
-.feed-item-top img{
-    width: 40px;
-    height: 40px;
-    margin: 20px 10px 20px 0;
-    border-radius: 50%;
-}
-.feed-item-top a{
-    color: rgba(244, 90, 131, 1);
-}
-.feed-item-top time{
-    position: absolute;
-    top: 20px;
-    right: 25px;
-    display: block;
-    width: fit-content;
-    height: 40px;
-    line-height: 40px;
-    color: rgba(181, 181, 181, 1);
-}
-.feed-item-center{
-    min-height: 50px;
-    line-height: 35px;
-    padding: 0 60px 10px 80px;
-}
-/*=====动态图片大小=====*/
-.feed-item-content-img-box{
-    position: relative;
-    display: block;
-    width: fit-content;
-    width: -moz-fit-content;
-    max-width: 420px;
-    padding: 15px;
-    margin-top: 5px;
-    background-color: #F4F5F7;
-    box-shadow: 0 1px 2px rgba(0, 0, 0, .1);
-
-    display: -webkit-box;             /* OLD - iOS 6-, Safari 3.1-6 */
-    display: -moz-box;                 /* OLD - Firefox 19- (buggy but mostly works) */
-    display: -ms-flexbox;       /* TWEENER - IE 10 */
-    display: -webkit-flex;      /* NEW - Chrome */
-    display: flex;              /* NEW, Spec - Opera 12.1, Firefox 20+ */
-
-    -webkit-box-orient: horizontal;     /* 09版 */
-    -webkit-flex-direction: row;        /* 12版 */
-    -moz-flex-direction: row;
-    -ms-flex-direction: row;
-    -o-flex-direction: row;
-    flex-direction: row;
-
-    -webkit-box-pack: center;       /* 09版 */
-    -webkit-justify-content: center;        /* 12版 */
-    -moz-justify-content: center;
-    -ms-justify-content: center;
-    -o-justify-content: center;
-    justify-content: center;
-
-    -webkit-box-lines: multiple;        /* 09版 */
-    -webkit-flex-wrap: wrap;        /* 12版 */
-    -moz-flex-wrap: wrap;
-    -ms-flex-wrap: wrap;
-    -o-flex-wrap: wrap;
-    flex-wrap: wrap;
-}
-.forword-item-center .feed-item-content-img-box{
-    background-color: rgba(255, 255, 255, 1);  /*设置转发动态的图片区域背景颜色*/
-}
-.feed-item-content-img{
-    -webkit-box-flex: 1;              /* OLD - iOS 6-, Safari 3.1-6 */
-    -moz-box-flex: 1;                 /* OLD - Firefox 19- */
-    -webkit-flex: 1;                     /* Chrome */
-    -ms-flex: 1;                           /* IE 10 */
-    flex: 1;                                   /* NEW, Spec - Opera 12.1, Firefox 20+ */
-
-    flex-shrink: 0;
-
-    width: 120px;
-    height: 120px;
-    margin: 5px;
-    border-radius: 5px;
-    cursor: pointer;
-}
-/*==========*/
-.feed-item-bottom{
-    width: 100%;
-    height: 40px;
-    line-height: 40px;
-
-    display: -webkit-box;             /* OLD - iOS 6-, Safari 3.1-6 */
-    display: -moz-box;                 /* OLD - Firefox 19- (buggy but mostly works) */
-    display: -ms-flexbox;       /* TWEENER - IE 10 */
-    display: -webkit-flex;      /* NEW - Chrome */
-    display: flex;              /* NEW, Spec - Opera 12.1, Firefox 20+ */
-
-    -webkit-box-orient: horizontal;     /* 09版 */
-    -webkit-flex-direction: row;        /* 12版 */
-    -moz-flex-direction: row;
-    -ms-flex-direction: row;
-    -o-flex-direction: row;
-    flex-direction: row;
-
-    -webkit-box-pack: center;       /* 09版 */
-    -webkit-justify-content: center;        /* 12版 */
-    -moz-justify-content: center;
-    -ms-justify-content: center;
-    -o-justify-content: center;
-    justify-content: center;
-}
-.feed-item-bottom span{
-    display: block;
-    text-align: center;
-}
-.feed-item-bottom span:nth-child(1), .feed-item-bottom span:nth-child(2), .feed-item-bottom span:nth-child(3){
-    -webkit-box-flex: 1;              /* OLD - iOS 6-, Safari 3.1-6 */
-    -moz-box-flex: 1;                 /* OLD - Firefox 19- */
-    -webkit-flex: 1;                     /* Chrome */
-    -ms-flex: 1;                           /* IE 10 */
-    flex: 1;                                   /* NEW, Spec - Opera 12.1, Firefox 20+ */
-}
-.feed-item-bottom span:nth-child(1){
-    border-right: solid 1px rgba(0, 0, 0, .1);
-}
-.feed-item-bottom span:nth-child(3){
-    border-left: solid 1px rgba(0, 0, 0, .1);
-}
-.feed-item-bottom span a{
-    font-size: 14px;
-    display: block;
-    width: fit-content;
-    height: 100%;
-    line-height: 100%;
-    margin: 0 auto;
-    color: #333333;
-    cursor: pointer;
-
-    display: -webkit-box;             /* OLD - iOS 6-, Safari 3.1-6 */
-    display: -moz-box;                 /* OLD - Firefox 19- (buggy but mostly works) */
-    display: -ms-flexbox;       /* TWEENER - IE 10 */
-    display: -webkit-flex;      /* NEW - Chrome */
-    display: flex;              /* NEW, Spec - Opera 12.1, Firefox 20+ */
-
-    -webkit-box-orient: horizontal;          /* 09版 */
-    -webkit-flex-direction: row;        /* 12版 */
-    -moz-flex-direction: row;
-    -ms-flex-direction: row;
-    -o-flex-direction: row;
-    flex-direction: row;
-
-    -webkit-box-pack: center;       /* 09版 */
-    -webkit-justify-content: center;        /* 12版 */
-    -moz-justify-content: center;
-    -ms-justify-content: center;
-    -o-justify-content: center;
-    justify-content: center;
-}
-.feed-item-bottom span a:hover{
-    color: rgba(244, 90, 131, 1);
-}
-/*是否转发*/
-.feed-item-bottom span .has-forword, .feed-item-bottom span .has-like{
-    color: rgba(244, 90, 131, 1);
-}
-.feed-item-bottom span .no-forword, .feed-item-bottom span .no-like{
-    color: #333333;
-}
-/*动态数据*/
-.forword-cnt, .comment-cnt, .like-cnt{
-    padding: 13px 5px;
-    font-size: 14px;
-    font-style: normal;
-}
-/*转发内容*/
-.forword-item-block{
-    position: relative;
-    background-color: #F4F5F7;
-    font-size: 13px;
-    padding-bottom: 10px;
-    margin-top: 8px;
-}
-.forword-item-top{
-    width: 100%;
-    height: 60px;
-    line-height: 60px;
-    padding: 0 15px;
-}
-.forword-item-top img{
-    width: 30px;
-    height: 30px;
-    margin: 15px 10px 15px 0;
-    border-radius: 50%;
-}
-.forword-item-top a{
-    color: rgba(244, 90, 131, 1);
-}
-.forword-item-top time{
-    position: absolute;
-    top: 15px;
-    right: 15px;
-    display: block;
-    width: fit-content;
-    height: 30px;
-    line-height: 30px;
-    color: rgba(181, 181, 181, 1);
-}
-.forword-item-center{
-    min-height: 50px;
-    line-height: 30px;
-    padding: 0 15px 0 50px;
-}
-/*动态已被删除*/
-.forword-item-inexistence{
-    min-height: 50px;
-    line-height: 30px;
-    padding: 10px 15px 10px 50px;
-}
-/*没有内容了*/
-#feeds-block .layui-flow-more{
-    font-size: 13px;
-    padding: 10px 0;
-}
-
 /*内容为空*/
 #no-content-box{
     width: 100%;
